# Clearn

./: .gitignore  README.md
basic/: .gitignore  CMakeLists.txt  main.c  main.cpp  main.h
basic/data_type/: data_type.c  data_type.h
basic/main/: macro_type.c  macro_type.h  ptr_type.c  str_type.c  str_type.h  str_usage.h  struct_type.c
basic/scripts/: write_file.py
basic/src/algorithm/: fibonacci.c  fibonacci.h
basic/src/c/: data_type.c  file_type.h  macro_type.h  main.c  main.h  ptr_type.c  ptr_type.h  struct_type.c  struct_type.h  thread.c  variable_args.c  variable_args.h
basic/src/c/algorithm/: fibonacci.c
basic/src/cpp/: Person.cpp  Person.h  cmd_runner.h  cpp_samples.cpp  cpp_samples.h  cpp_string.cpp  cpp_string.h  ffmpeg_cmd.cpp  ffmpeg_cmd.h  io_sample.cpp  io_sample.h  json_sample.cpp  json_sample.h  main.cpp  person.cpp  person.h  strings.cpp  strings.h
basic/src/main/: data_type.c  data_type.h  file_type.c  macro_type.c  mem_manage.c  mem_manage.h  ptr_type.c  str_type.c  struct_type.c  struct_type.h  thread.c  thread.h  variable_args.c
basic/str/: str_usage.c  str_usage.h
ffmpeger/: .gitignore  CMakeLists.txt
ffmpeger/src/: ffmpeger-main.cpp
